Adopt multilineArraysWrapThreshold to always wrap arrays

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,7 @@
         "noUnusedLocals": true,
         "skipLibCheck": true
     },
-    "include": ["schema"]
+    "include": [
+        "schema"
+    ]
 }
