--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
+        "noUnusedLocals": true,
         "skipLibCheck": true
     },
     "include": ["schema"]
