Adding a sub-feature to control uninstall button visibility.

--- a/features/settings-page.json
+++ b/features/settings-page.json
@@ -3,5 +3,10 @@
         "description": "A feature toggle for the settings page",
         "sampleExcludeRecords": {}
     },
-    "exceptions": []
+    "exceptions": [],
+    "features": {
+        "uninstallButton": {
+            "state": "enabled"
+        }
+    }
 }
