Swapping to showing it in the overrides file.

--- a/features/settings-page.json
+++ b/features/settings-page.json
@@ -6,7 +6,7 @@
     "exceptions": [],
     "features": {
         "uninstallButton": {
-            "state": "enabled"
+            "state": "disabled"
         }
     }
 }
