Moving to just windows overrides file.

--- a/features/settings-page.json
+++ b/features/settings-page.json
@@ -3,10 +3,5 @@
         "description": "A feature toggle for the settings page",
         "sampleExcludeRecords": {}
     },
-    "exceptions": [],
-    "features": {
-        "uninstallButton": {
-            "state": "disabled"
-        }
-    }
+    "exceptions": []
 }
