Update concurrency setting in build workflow
Changed concurrency setting to queue concurrent tasks.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -13,7 +13,7 @@ jobs:
     publish:
         concurrency:
             group: build-and-publish
-            cancel-in-progress: true
+            cancel-in-progress: false # queue concurrent tasks only.
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@main
