Update CODEOWNERS file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -28,3 +28,6 @@ overrides/extension-override.json @daxtheduck @duckduckgo/config-aor @duckduckgo
 overrides/ios-override.json @daxtheduck @duckduckgo/config-aor @duckduckgo/apple-devs @duckduckgo/breakage-aor @duckduckgo/breakage @duckduckgo/content-scope-scripts-owners
 overrides/macos-override.json @daxtheduck @duckduckgo/config-aor @duckduckgo/apple-devs @duckduckgo/breakage-aor @duckduckgo/breakage @duckduckgo/content-scope-scripts-owners
 overrides/windows-override.json @daxtheduck @duckduckgo/config-aor @duckduckgo/team-windows-development @duckduckgo/breakage-aor @duckduckgo/breakage @duckduckgo/content-scope-scripts-owners
+
+# Workflow owners
+.github/workflows/feature-flag-cleanup-tracker.yml @duckduckgo/config-aor @duckduckgo/android-devs
