--- a/.github/workflows/feature-flag-cleanup-tracker.yml
+++ b/.github/workflows/feature-flag-cleanup-tracker.yml
@@ -210,7 +210,7 @@ jobs:
 
 
             - name: Get PR author Asana ID
-              uses: ./actions
+              uses: duckduckgo/native-github-asana-sync@v2.0
               id: get-author-asana-id
               with:
                 github-pat: ${{ secrets.GT_DAXMOBILE }}
