update github pat

--- a/.github/workflows/feature-flag-cleanup-tracker.yml
+++ b/.github/workflows/feature-flag-cleanup-tracker.yml
@@ -213,7 +213,7 @@ jobs:
               uses: duckduckgo/native-github-asana-sync@v2.0
               id: get-author-asana-id
               with:
-                github-pat: ${{ secrets.GT_DAXMOBILE }}
+                github-pat: ${{ secrets.github_pat }}
                 action: 'get-asana-user-id'
 
             - name: Create Asana Task
