--- a/.github/workflows/feature-flag-cleanup-tracker.yml
+++ b/.github/workflows/feature-flag-cleanup-tracker.yml
@@ -214,6 +214,7 @@ jobs:
               id: get-author-asana-id
               with:
                 github-pat: ${{ secrets.GH_RO_PAT }}
+                github-username: 'catalinradoiu'
                 action: 'get-asana-user-id'
 
             - name: Create Asana Task
@@ -222,7 +223,6 @@ jobs:
               with:
                   asana-pat: ${{ secrets.ASANA_ACCESS_TOKEN }}
                   asana-project: ${{ vars.GH_ANDROID_APP_PROJECT_ID }}
-                  asana-section: ${{ vars.GH_ANDROID_APP_INCOMING_SECTION_ID }}
                   asana-task-name: ${{ steps.asana_content.outputs.task_name }}
                   asana-assignee: ${{ steps.get-author-asana-id.outputs.asanaUserId }}
                   asana-task-description: ${{ steps.asana_content.outputs.task_description }}
