--- a/.github/workflows/feature-flag-cleanup-tracker.yml
+++ b/.github/workflows/feature-flag-cleanup-tracker.yml
@@ -217,13 +217,17 @@ jobs:
                 github-username: 'catalinradoiu'
                 action: 'get-asana-user-id'
 
-            - name: Create Asana Task
-              if: steps.asana_content.outcome == 'success'
-              uses: duckduckgo/native-github-asana-sync@v2.0
-              with:
-                  asana-pat: ${{ secrets.ASANA_ACCESS_TOKEN }}
-                  asana-project: ${{ vars.GH_ANDROID_APP_PROJECT_ID }}
-                  asana-task-name: ${{ steps.asana_content.outputs.task_name }}
-                  asana-assignee: ${{ steps.get-author-asana-id.outputs.asanaUserId }}
-                  asana-task-description: ${{ steps.asana_content.outputs.task_description }}
-                  action: 'create-asana-task'
+            - name: Debug Asana User ID
+              run: |
+                echo "Asana User ID: ${{ steps.get-author-asana-id.outputs.asanaUserId }}"
+
+#            - name: Create Asana Task
+#              if: steps.asana_content.outcome == 'success'
+#              uses: duckduckgo/native-github-asana-sync@v2.0
+#              with:
+#                  asana-pat: ${{ secrets.ASANA_ACCESS_TOKEN }}
+#                  asana-project: ${{ vars.GH_ANDROID_APP_PROJECT_ID }}
+#                  asana-task-name: ${{ steps.asana_content.outputs.task_name }}
+#                  asana-assignee: ${{ steps.get-author-asana-id.outputs.asanaUserId }}
+#                  asana-task-description: ${{ steps.asana_content.outputs.task_description }}
+#                  action: 'create-asana-task'
