--- a/.github/workflows/feature-flag-cleanup-tracker.yml
+++ b/.github/workflows/feature-flag-cleanup-tracker.yml
@@ -221,13 +221,13 @@ jobs:
               run: |
                 echo "Asana User ID: ${{ steps.get-author-asana-id.outputs.asanaUserId }}"
 
-#            - name: Create Asana Task
-#              if: steps.asana_content.outcome == 'success'
-#              uses: duckduckgo/native-github-asana-sync@v2.0
-#              with:
-#                  asana-pat: ${{ secrets.ASANA_ACCESS_TOKEN }}
-#                  asana-project: ${{ vars.GH_ANDROID_APP_PROJECT_ID }}
-#                  asana-task-name: ${{ steps.asana_content.outputs.task_name }}
-#                  asana-assignee: ${{ steps.get-author-asana-id.outputs.asanaUserId }}
-#                  asana-task-description: ${{ steps.asana_content.outputs.task_description }}
-#                  action: 'create-asana-task'
+            - name: Create Asana Task
+              if: steps.asana_content.outcome == 'success'
+              uses: duckduckgo/native-github-asana-sync@v2.0
+              with:
+                  asana-pat: ${{ secrets.ASANA_ACCESS_TOKEN }}
+                  asana-project: ${{ vars.GH_ANDROID_APP_PROJECT_ID }}
+                  asana-task-name: ${{ steps.asana_content.outputs.task_name }}
+                  asana-task-assignee: ${{ steps.get-author-asana-id.outputs.asanaUserId }}
+                  asana-task-description: ${{ steps.asana_content.outputs.task_description }}
+                  action: 'create-asana-task'
