--- a/features/app-tracker-protection.json
+++ b/features/app-tracker-protection.json
@@ -717,6 +717,10 @@
                 {
                     "packageName": "org.thoughtcrime.securesms",
                     "reason": "Users report app issues with AppTP enabled"
+                },
+                {
+                    "packageName": "com.infrasoft.uboi",
+                    "reason": "Users report app issues with AppTP enabled"
                 }
             ],
             "unhideSystemApps": [
