Update reason for app issues with AppTP

--- a/features/app-tracker-protection.json
+++ b/features/app-tracker-protection.json
@@ -720,7 +720,7 @@
                 },
                 {
                     "packageName": "com.infrasoft.uboi",
-                    "reason": "Users report app issues with AppTP enabled"
+                    "reason": "App doesn't run over any VPN connection"
                 }
             ],
             "unhideSystemApps": [
