Include TypeScript files in workflow paths
Add TypeScript files to the build and publish workflow.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -8,6 +8,7 @@ on:
             - '**.json'
             - '**.js'
             - '**.yml'
+            - '**.ts' # For schema changes that other repos may rely on.
 
 jobs:
     publish:
