--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "Apache 2.0",
   "devDependencies": {
     "@duckduckgo/eslint-config": "github:duckduckgo/eslint-config#v0.1.0",
+    "@octokit/rest": "^22.0.1",
     "ajv": "^8.17.1",
     "chai": "^5.2.0",
     "diff": "^7.0.0",
