--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -12,6 +12,9 @@ on:
 
 jobs:
     publish:
+        concurrency:
+            group: build-and-publish
+            cancel-in-progress: false # queue concurrent tasks only.
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@main
