--- a/.github/workflows/auto-respond-pr.yml
+++ b/.github/workflows/auto-respond-pr.yml
@@ -29,7 +29,7 @@ jobs:
     # Runs independently of the main workflow to ensure task closure even if
     # other steps fail (e.g., branch deleted before checkout completes)
     close_asana_on_merge:
-        if: github.event.action == 'closed' && github.event.pull_request.merged == true
+        if: github.event.action == 'closed'
         runs-on: ubuntu-latest
         steps:
             - uses: duckduckgo/action-asana-sync@v11
