Unhide Samsung Weather app from VPN /AppTP exclusion list

--- a/features/app-tracker-protection.json
+++ b/features/app-tracker-protection.json
@@ -760,6 +760,7 @@
                 "com.samsung.android.dialer",
                 "com.samsung.attvvm",
                 "com.samsung.vvm",
+                "com.sec.android.daemonapp",
                 "com.touchtype.swiftkey"
             ]
         }
