--- a/.github/workflows/feature-flag-cleanup-tracker.yml
+++ b/.github/workflows/feature-flag-cleanup-tracker.yml
@@ -13,6 +13,7 @@ jobs:
         runs-on: ubuntu-latest
         if: github.event.pull_request.merged == true
         strategy:
+            fail-fast: false
             matrix:
                 platform:
                     - name: 'Android'
